added new employee-datails component

--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -1,11 +1,15 @@
+<!-- // navigation bar -->
 <app-navbar></app-navbar>
-<h1 style=""><span>{{title}}</span></h1>
+
+
+<!-- // body -->
+<div style="text-align: center;"><h1>{{title}}</h1></div>
 <div class="container">
     <router-outlet></router-outlet>
 </div>
 
 
-
+<!-- // fotter -->
 <footer class="footer">
     <div class="container">
         <span>All Rights Resevered 2023 @PankajPilkhwal</span>
