--- a/angular-frontend/src/app/components/employee-list/employee-list.component.html
+++ b/angular-frontend/src/app/components/employee-list/employee-list.component.html
@@ -9,14 +9,20 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th>Email Id </th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let employee of employees">
             <td>{{employee.id}}</td>
             <td>{{employee.firstName}}</td>
-            <td>{{employee.lastName}}</td>
+            <td>{{employee.lastName}}</td> 
             <td>{{employee.emailId}}</td>
+            <td>
+                <button class="btn btn-primary" (click)="updateEmployee(employee.id)">Update</button>
+                <button class="btn btn-info" (click)="employeeDetails(employee.id)">Details</button>
+                <button class="btn btn-danger" (click)="deleteEmployee(employee.id)">Delete</button>
+            </td>
         </tr>
     </tbody>
      
